Feature(App): Добавил рекламу
-Добавил рекламу
-Исправил ошибку с размещением элементов

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -61,6 +61,8 @@
                     android:drawableLeft="@drawable/ic_theme_dark"
                     android:drawablePadding="16dp"
                     android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
                     android:textSize="@dimen/font_normal"
                     android:textColor="@color/colorTextPrimary"
                     android:text="@string/setting_change_theme_dark"
@@ -83,6 +85,8 @@
                     android:drawableLeft="@drawable/ic_theme_light"
                     android:drawablePadding="16dp"
                     android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
                     android:textSize="@dimen/font_normal"
                     android:textColor="@color/colorTextPrimary"
                     android:text="@string/setting_change_theme_light"
@@ -105,6 +109,8 @@
                     android:drawableLeft="@drawable/ic_theme_automatically"
                     android:drawablePadding="16dp"
                     android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
                     android:textSize="@dimen/font_normal"
                     android:textColor="@color/colorTextPrimary"
                     android:text="@string/setting_change_theme_automatically"
