--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -71,14 +71,15 @@
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@id/iconImageView"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            app:riv_corner_radius="6dp"
+            app:layout_constraintDimensionRatio="h, 1.76:1"
             app:layout_constraintEnd_toEndOf="@id/titleTextView"
             app:layout_constraintStart_toStartOf="@id/titleTextView"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
-            tools:src="@drawable/ic_placeholder"
-            tools:ignore="ContentDescription" />
+            app:riv_corner_radius="6dp"
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/ic_placeholder" />
 
         <TextView
             android:id="@+id/fullDescriptionTextView"
