--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -52,16 +52,17 @@
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="62dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="12dp"
+        android:gravity="start|top"
+        android:ellipsize="end"
+        android:maxLines="3"
         android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_normal"
         android:textStyle="bold"
-        android:maxLines="3"
-        android:ellipsize="end"
-        app:layout_constraintBottom_toBottomOf="@+id/iconImageView"
         app:layout_constraintEnd_toStartOf="@id/iconImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryTextView"
