Feature(LiveStream): Сделал прямую трансляцию
-Создал LiveStreamActivity для отоборжанеия прямой трансляции
-Создал ChangeTvChannelsBottomSheet для смены телеканала
-Создал CustomVideoView, который инкапсулирует работу с VideoView
-Создал VideoActivity, который инкапсулирует работу со статус баром и навигационным баром
-Создал DisappearingConstraintLayout, который управляет исчезновением ViewGroup после нажатия

--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -55,7 +55,7 @@
             tools:text="30 Июня 2020, 17:04" />
 
         <TextView
-            android:id="@+id/titleTextView"
+            android:id="@+id/nameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
@@ -74,9 +74,9 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             app:layout_constraintDimensionRatio="h, 1.76:1"
-            app:layout_constraintEnd_toEndOf="@id/titleTextView"
-            app:layout_constraintStart_toStartOf="@id/titleTextView"
-            app:layout_constraintTop_toBottomOf="@id/titleTextView"
+            app:layout_constraintEnd_toEndOf="@id/nameTextView"
+            app:layout_constraintStart_toStartOf="@id/nameTextView"
+            app:layout_constraintTop_toBottomOf="@id/nameTextView"
             app:riv_corner_radius="6dp"
             tools:ignore="ContentDescription"
             tools:src="@drawable/ic_placeholder" />
