--- a/app/src/main/res/layout/bottom_dialog_filter_news.xml
+++ b/app/src/main/res/layout/bottom_dialog_filter_news.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -31,14 +31,14 @@
         app:flRowSpacing="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+        app:layout_constraintTop_toBottomOf="@id/nameTextView" />
 
     <View
         android:id="@+id/horizontalSeparate"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
-        android:background="@color/colorSeparate"
+        android:background="@color/colorSeparator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoriesFlowLayout" />
@@ -47,7 +47,7 @@
         android:id="@+id/verticalSeparate"
         android:layout_width="1dp"
         android:layout_height="30dp"
-        android:background="@color/colorSeparate"
+        android:background="@color/colorSeparator"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
