--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,6 +13,10 @@
         <item name="android:background">@color/colorBackgroundToolbar</item>
         <item name="android:elevation">4dp</item>
         <item name="titleTextColor">@color/colorTitleToolbar</item>
+    </style>
+
+    <style name="Toolbar.TitleTextInLiveStream" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="RadioButton" parent="Theme.AppCompat.Light">
