--- a/app/src/main/res/layout/activity_live_stream.xml
+++ b/app/src/main/res/layout/activity_live_stream.xml
@@ -11,7 +11,7 @@
     <abdulmanov.eduard.news.presentation.livestream.helper.CustomVideoView
         android:id="@+id/customViewView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"/>
 
     <abdulmanov.eduard.news.presentation.livestream.helper.DisappearingConstraintLayout
