--- a/app/src/main/res/layout/layout_custom_video_view.xml
+++ b/app/src/main/res/layout/layout_custom_video_view.xml
@@ -2,12 +2,12 @@
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"/>
 
 </merge>
