Refactor(App): Отрефакторил код
-Исправил ошибку с прочитанной новостью, теперь isAlreadyRead ставится и у cachedNews

--- a/app/src/main/res/layout/activity_live_stream.xml
+++ b/app/src/main/res/layout/activity_live_stream.xml
@@ -9,7 +9,7 @@
     android:background="@android:color/black">
 
     <abdulmanov.eduard.news.presentation.livestream.helper.CustomVideoView
-        android:id="@+id/customViewView"
+        android:id="@+id/customVideoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
