--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -45,11 +45,12 @@
 
         <TextView
             android:id="@+id/dateTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textSize="@dimen/font_normal"
             android:textColor="@color/colorTextSecondary"
+            android:textSize="@dimen/font_normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/categoryTextView"
             app:layout_constraintTop_toTopOf="@+id/categoryTextView"
             tools:text="30 Июня 2020, 17:04" />
